--- a/web-app/templates/home.html
+++ b/web-app/templates/home.html
@@ -56,7 +56,7 @@
 
         button {
             padding: 10px;
-            background: #ff0000;
+            background: #d9230f;
             color: white;
             border: none;
             border-radius: 8px;
@@ -66,7 +66,7 @@
         }
 
         button:hover {
-            background: #e60000;
+            background: #c11f0d;
         }
 
         h2 {
