Example data functionality

--- a/web-app/templates/home.html
+++ b/web-app/templates/home.html
@@ -89,6 +89,7 @@
         <br>
         <br>
         <button onclick="openModal()">&#x2139; Help</button>
+        <a href="/example-results" style="text-decoration: none; margin-left: 10px;"><button>See Example</button></a>
     </div>
 
     <div id="infoModal" class="modal">
